/***********************************************************************
 X3 ChangeLog

2006-08-08  Neil Spierling  <sirvulcan@gmail.com>

	* src/chanserv.c: Fixed a crash with giveownership. X3 would crash
	if a giveownership command was issued in a channel with no owners.

2006-08-07  Neil Spierling  <sirvulcan@gmail.com>

	* configure: Regenerated.

	* configure.in: Added checks for GeoIP headers and libs.

	* x3.conf.example: Add in 2 options for the dat filenames of the
	city and country files. If not specified then no geoip data
	will be checked.

	* src/config.h.in: Regenerated.

	* src/hash.c: Created a function to check the geoip info from the
	dat files.

	* src/hash.h: Decelerations plus added entries to the userNode
	struct.

	* src/opserv.c: Display the GeoIP information in WHOIS.

	* src/proto-p10.c: Call the new geoip data collection function
	towards the end of AddUser.

2006-08-06  Neil Spierling  <sirvulcan@gmail.com>

	* src/global.c: Fixed a bug, wasnt message_del'ing some messages.

2006-08-01  Alex Schumann  <rubin@afternet.org>

	* src/chanserv.c: Add automode 6, to just voice everyone with access.
	Idea by daniel (thx)

2006-08-01  Neil Spierling  <sirvulcan@gmail.com>

	* This message is apart of the below one, its just seperate so
	it doesnt get lost amongst the below messages.

	* src/global.c: Fixed a warning.

2006-08-01  Neil Spierling  <sirvulcan@gmail.com>

	* configure: Removed bahamut support, didnt even work.

	* configure.in: Removed bahamut support, didnt even work.

	* INSTALL: Removed bahamut support, didnt even work.

	* x3.conf.example: Removed bahamut support, didnt even work.

	* patches/log-pgsql.diff: Removed bahamut support, didnt even work.

	* patches/helpserv-pgsql.diff: Removed bahamut support, didnt even
	work.

	* src/config.h.in: Removed bahamut support, didnt even work.

	* src/gline.c: Removed bahamut support, didnt even work.

	* src/hash.h: Removed bahamut support, didnt even work.
